<resources>
    <string name="app_name">FoodDay</string>
    <string name="profile">Profile</string>
    <string name="basket">Basket</string>
    <string name="menu">Menu</string>
    <string name="breakfast">Breakfast</string>
    <string name="pasta">Pasta</string>
    <string name="seafood">Seafood</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="dessert">Dessert</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="vine">Vine</string>
    <string name="scan_qr_button">scan qr button</string>
    <string name="chicken">Chicken</string>
    <string name="sandwich">Sandwich</string>
    <string name="burger_banner">Burger banner</string>
    <string name="pizza_banner">Pizza banner</string>
    <string name="sushi_banner">Sushi_banner</string>
    <string name="kebab_banner">kebab_banner</string>
    <string name="veg_banner">vegetarian banner</string>

    <string-array name="countries">
        <item>Paris</item>
        <item>Berlin</item>
        <item>Moscow</item>
        <item>London</item>
    </string-array>

    <string-array name="meal_categories">
        <item>Breakfast</item>
        <item>Pasta</item>
        <item>Seafood</item>
        <item>Vegetarian</item>
        <item>Dessert</item>
        <item>Miscellaneous</item>
    </string-array>
</resources>