<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_scrollFlags="scroll|enterAlways">

            <Spinner
                android:id="@+id/counries_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:entries="@array/countries"
                android:gravity="start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/scan_qr_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="#00000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_qr_code_scanner_24"
                android:contentDescription="@string/scan_qr_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white">

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="130dp"
                    android:layout_margin="@dimen/medium_margin"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/burger_banner"
                        app:srcCompat="@drawable/burger_banner" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="130dp"
                    android:layout_margin="@dimen/medium_margin"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/pizza_banner"
                        android:contentDescription="@string/pizza_banner" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="130dp"
                    android:layout_margin="@dimen/medium_margin"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/sushi_banner"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/sushi_banner" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="130dp"
                    android:layout_margin="@dimen/medium_margin"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/kebab_banner"
                        android:contentDescription="@string/kebab_banner" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="130dp"
                    android:layout_margin="@dimen/medium_margin"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/veg_banner"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/veg_banner" />

                </androidx.cardview.widget.CardView>



            </LinearLayout>
        </HorizontalScrollView>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/breakfast"
                android:text="@string/breakfast" />

            <com.google.android.material.tabs.TabItem

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/pasta"
                android:text="@string/pasta" />

            <com.google.android.material.tabs.TabItem

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/seafood"
                android:text="@string/seafood" />

            <com.google.android.material.tabs.TabItem

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/vegetarian"
                android:text="@string/vegetarian" />

            <com.google.android.material.tabs.TabItem

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/dessert"
                android:text="@string/dessert" />

            <com.google.android.material.tabs.TabItem

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/miscellaneous"
                android:text="@string/miscellaneous" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/menu_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_meal" />
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>